--- a/html/components/component_button_icon.html
+++ b/html/components/component_button_icon.html
@@ -65,7 +65,7 @@
 </head>
 
 <body>
-	<div class="ui-guide">
+	<div class="ui-guide content">
 		<h1>Button Inner Icon</h1>
 		<p>Anchor, Button 혼용 가능합니다.</p>
 
