--- a/html/components/component_card.html
+++ b/html/components/component_card.html
@@ -60,7 +60,7 @@
 </head>
 
 <body>
-	<div class="ui-guide">
+	<div class="ui-guide content">
 		<h1>Card Style</h1>
 
 		<div class="ui-guide-section">
