--- a/html/components/component_datepicker.html
+++ b/html/components/component_datepicker.html
@@ -61,7 +61,7 @@
 
 <body>
 
-	<div class="ui-guide">
+	<div class="ui-guide content">
 		<h1>Modal</h1>
 		<div class="ui-guide-section">
 			<h2>Year</h2>
