--- a/html/components/component_dropdown.html
+++ b/html/components/component_dropdown.html
@@ -61,7 +61,7 @@
 
 <body>
 
-	<div class="ui-guide">
+	<div class="ui-guide content">
 		<h1>Dropdown</h1>
 		<div class="ui-guide-section">
 			<div class="guide-column-list">
