--- a/html/components/component_text_items.html
+++ b/html/components/component_text_items.html
@@ -67,7 +67,7 @@
 </head>
 
 <body>
-	<div class="ui-guide">
+	<div class="ui-guide content">
 		<h1>Typography</h1>
 		<p>Headline, Title, Body</p>
 
