--- a/html/components/component_toast.html
+++ b/html/components/component_toast.html
@@ -62,7 +62,7 @@
 
 <body>
 
-	<div class="ui-guide">
+	<div class="ui-guide content">
 		<h1>Toast</h1>
 		<div class="ui-guide-section">
 			<h2>Toast <span>Type</span></h2>
