--- a/html/components/component_toggle.html
+++ b/html/components/component_toggle.html
@@ -62,7 +62,7 @@
 </head>
 
 <body>
-	<div class="ui-guide">
+	<div class="ui-guide content">
 		<h1>Button</h1>
 		<p>Anchor, Button 혼용 가능합니다.</p>
 
