--- a/html/components/component_input_text.html
+++ b/html/components/component_input_text.html
@@ -73,7 +73,7 @@
 					<dd>
 						<div class="form">
 							<div class="input-wrap">
-								<input type="text" placeholder="Placeholder" aria-label="input">
+								<input type="text" placeholder="Placeholder" aria-label="input" maxlength="30">
 							</div>
 						</div>
 					</dd>
