--- a/html/layout/layout-header.html
+++ b/html/layout/layout-header.html
@@ -410,6 +410,12 @@
 		}
 		gnbMenuSearch.init();
 	</script>
+	<script>
+		// MicroModal.show('modal-gnb', {
+		// 	disableFocus: true, // [7]
+
+		// })
+	</script>
 
 </body>
 
