--- a/resources/css/ui-content.css
+++ b/resources/css/ui-content.css
@@ -966,19 +966,19 @@ i.live-off {display:inline-block;width:16px;height:16px;background:url(/resource
 .financial-news-list .financial-news-detail .financial-news-title {display:flex;align-items:center;gap:8px;margin-bottom:8px;}
 .financial-news-list .financial-news-detail .financial-news-title .media {display:flex;align-items:center;gap:6px;font-size:16px;font-weight:500;color:var(--typography-gray);line-height:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;padding:0 4px;}
 .financial-news-list .financial-news-detail .financial-news-title .media i {display:flex;flex:0 0 26px;width:26px;height:26px;border-radius:50%;}
-.financial-news-list .financial-news-detail .financial-news-title .media i.media01 {background:url(/resources/images/PBWIV/media01.svg) center center / contain no-repeat;}
-.financial-news-list .financial-news-detail .financial-news-title .media i.media02 {background:url(/resources/images/PBWIV/media02.svg) center center / contain no-repeat;}
-.financial-news-list .financial-news-detail .financial-news-title .media i.media03 {background:url(/resources/images/PBWIV/media03.svg) center center / contain no-repeat;}
-.financial-news-list .financial-news-detail .financial-news-title .media i.media04 {background:url(/resources/images/PBWIV/media04.svg) center center / contain no-repeat;}
-.financial-news-list .financial-news-detail .financial-news-title .media i.media05 {background:url(/resources/images/PBWIV/media05.svg) center center / contain no-repeat;}
-.financial-news-list .financial-news-detail .financial-news-title .media i.media06 {background:url(/resources/images/PBWIV/media06.svg) center center / contain no-repeat;}
-.financial-news-list .financial-news-detail .financial-news-title .media i.media07 {background:url(/resources/images/PBWIV/media07.svg) center center / contain no-repeat;}
-.financial-news-list .financial-news-detail .financial-news-title .media i.media08 {background:url(/resources/images/PBWIV/media08.svg) center center / contain no-repeat;}
-.financial-news-list .financial-news-detail .financial-news-title .media i.media09 {background:url(/resources/images/PBWIV/media09.svg) center center / contain no-repeat;}
-.financial-news-list .financial-news-detail .financial-news-title .media i.media10 {background:url(/resources/images/PBWIV/media10.svg) center center / contain no-repeat;}
-.financial-news-list .financial-news-detail .financial-news-title .media i.media11 {background:url(/resources/images/PBWIV/media11.svg) center center / contain no-repeat;}
-.financial-news-list .financial-news-detail .financial-news-title .media i.media12 {background:url(/resources/images/PBWIV/media12.svg) center center / contain no-repeat;}
-.financial-news-list .financial-news-detail .financial-news-title .media i.mediaetc {background:url(/resources/images/PBWIV/mediaetc.svg) center center / contain no-repeat;}
+.financial-news-list .financial-news-detail .financial-news-title .media i.media01 {background:url(/resources/images/PBWIV/media01.png) center center / contain no-repeat;}
+.financial-news-list .financial-news-detail .financial-news-title .media i.media02 {background:url(/resources/images/PBWIV/media02.png) center center / contain no-repeat;}
+.financial-news-list .financial-news-detail .financial-news-title .media i.media03 {background:url(/resources/images/PBWIV/media03.png) center center / contain no-repeat;}
+.financial-news-list .financial-news-detail .financial-news-title .media i.media04 {background:url(/resources/images/PBWIV/media04.png) center center / contain no-repeat;}
+.financial-news-list .financial-news-detail .financial-news-title .media i.media05 {background:url(/resources/images/PBWIV/media05.png) center center / contain no-repeat;}
+.financial-news-list .financial-news-detail .financial-news-title .media i.media06 {background:url(/resources/images/PBWIV/media06.png) center center / contain no-repeat;}
+.financial-news-list .financial-news-detail .financial-news-title .media i.media07 {background:url(/resources/images/PBWIV/media07.png) center center / contain no-repeat;}
+.financial-news-list .financial-news-detail .financial-news-title .media i.media08 {background:url(/resources/images/PBWIV/media08.png) center center / contain no-repeat;}
+.financial-news-list .financial-news-detail .financial-news-title .media i.media09 {background:url(/resources/images/PBWIV/media09.png) center center / contain no-repeat;}
+.financial-news-list .financial-news-detail .financial-news-title .media i.media10 {background:url(/resources/images/PBWIV/media10.png) center center / contain no-repeat;}
+.financial-news-list .financial-news-detail .financial-news-title .media i.media11 {background:url(/resources/images/PBWIV/media11.png) center center / contain no-repeat;}
+.financial-news-list .financial-news-detail .financial-news-title .media i.media12 {background:url(/resources/images/PBWIV/media12.png) center center / contain no-repeat;}
+.financial-news-list .financial-news-detail .financial-news-title .media i.mediaetc {background:url(/resources/images/PBWIV/mediaetc.png) center center / contain no-repeat;}
 .financial-news-list .financial-news-detail .title-large {margin-bottom:8px;}
 .financial-news-list .financial-news-detail .date {display:block;font-size:14px;font-weight:400;color:var(--gray-500);padding:0 4px;}
 .financial-news-list .financial-news-detail .tag-wrap {display:flex;gap:4px;margin-top:8px;}
