--- a/html/components/component_business_card.html
+++ b/html/components/component_business_card.html
@@ -188,8 +188,8 @@
 										<div class="left">
 											<figure>
 												<picture>
-													<source srcset="/resources/images/bs_card/bs_photo.svg">
-													<img src="/resources/images/bs_card/bs_photo.svg" alt="">
+													<source srcset="/resources/images/bs_card/bs_photo.png">
+													<img src="/resources/images/bs_card/bs_photo.png" alt="">
 												</picture>
 											</figure>
 											<object type="image/svg+xml" data="/resources/images/bs_card/bs_b_center_logo01.svg"></object>
@@ -445,8 +445,8 @@
 										<div class="left">
 											<figure>
 												<picture>
-													<source srcset="/resources/images/bs_card/bs_photo.svg">
-													<img src="/resources/images/bs_card/bs_photo.svg" alt="">
+													<source srcset="/resources/images/bs_card/bs_photo.png">
+													<img src="/resources/images/bs_card/bs_photo.png" alt="">
 												</picture>
 											</figure>
 											<object type="image/svg+xml" data="/resources/images/bs_card/bs_b_center_logo01.svg">
