--- a/resources/css/ui-style.css
+++ b/resources/css/ui-style.css
@@ -674,7 +674,7 @@ input[type="checkbox"].type-eu:checked {background:url(/resources/images/form/fo
 
 
 /* form */
-.form {width:100%;}
+.form {width:100%;transition:padding-left 0.3s ease;}
 .form .label {display:flex;align-items:center;justify-content:space-between;font-size:16px;font-weight:400;line-height:1.5;color:var(--typography-title);margin-bottom:8px;}
 .form .label .right {font-size:15px;font-weight:400;color:var(--typography-caption);line-height:1.6;}
 .form .label:empty {display:none;}
@@ -707,6 +707,23 @@ input[type="checkbox"].type-eu:checked {background:url(/resources/images/form/fo
 /* shortcut-button-wrap */
 .shortcut-button-wrap {display:flex;align-items:center;justify-content:center;gap:3px;margin-top:12px;flex-wrap:wrap;}
 .shortcut-button-wrap button {flex:1;}
+
+/* search-history-back */
+.search-history-back {}
+.search-history-back {width:0;flex:0;height:0;overflow:hidden;transition:all 0.3s ease;position:absolute;left:0;top:0;}
+.search-history-back button {display:flex;width:40px;height:52px;
+    -webkit-mask-position:center center;
+    mask-position:center center;
+    -webkit-mask-size:10px 20px;
+    mask-size:10px 20px;
+    -webkit-mask-repeat:no-repeat;
+    mask-repeat:no-repeat;
+    -webkit-mask-image:url(/resources/images/arrow/ico_history_back.svg);
+    mask-image:url(/resources/images/arrow/ico_history_back.svg);
+    background-color:var(--icon-default);
+}
+.is-searched {position:relative;padding-left:48px;}
+.is-searched .search-history-back {width:40px;flex:0 0 40px;height:52px;}
 
 
 /* tab-content */ 
