--- a/resources/css/ui-style.css
+++ b/resources/css/ui-style.css
@@ -607,7 +607,7 @@ input[type="checkbox"].type-eu:checked {background:url(/resources/images/form/fo
 .inp-toggle-large input:checked:before {left:calc(100% - 28px);}
 
 .inp-toggle-inner-text label {display:flex;align-items:center;gap:8px;}
-.inp-toggle-inner-text input {position:relative;display:flex;height:32px;appearance:none;-webkit-appearance:none;border:0;cursor:inherit;background-color:var(--gray-400);border-radius:68px;transition:background-color 0.15s ease;}
+.inp-toggle-inner-text input {position:relative;display:flex;height:32px;appearance:none;-webkit-appearance:none;border:0;cursor:inherit;background-color:var(--gray-400);border-radius:68px;transition:background-color 0.15s ease;width:auto;}
 .inp-toggle-inner-text input:before {content:'';position:absolute;left:4px;top:4px;width:24px;height:24px;background-color:var(--basic-white);filter:drop-shadow(0px 0px 4px var(--shadow-gray_3));border-radius:24px;transition:left 0.15s ease;}
 .inp-toggle-inner-text input:after {content:attr(data-label);padding:0 9px 0 34px;font-size:14px;font-weight:400;color:var(--typography-white);display:flex;align-items:center;transition:padding 0.3s ease;}
 .inp-toggle-inner-text input:checked {background-color:var(--brandPrimary-blue500);}
