--- a/html/components/component_business_card.html
+++ b/html/components/component_business_card.html
@@ -79,7 +79,7 @@
 
 		<div class="ui-guide-section">
 			<div class="ui-guide-box">
-				<h2>Type A</h2>
+				<h2>A타입</h2>
 				<div class="guide-column-list">
 
 					<!-- bs-card-wrap -->
@@ -167,7 +167,7 @@
 			</div>
 			<hr>
 			<div class="ui-guide-box">
-				<h2>Type A</h2>
+				<h2>A타입 사진</h2>
 				<div class="guide-column-list">
 
 					<!-- bs-card-wrap -->
@@ -261,7 +261,7 @@
 			<hr>
 
 			<div class="ui-guide-box">
-				<h2>Type A</h2>
+				<h2>위비프렌즈 타입</h2>
 				<div class="guide-column-list">
 
 					<!-- bs-card-wrap -->
@@ -345,7 +345,7 @@
 			</div>
 			<hr>
 			<div class="ui-guide-box">
-				<h2>Type B</h2>
+				<h2>TC타입</h2>
 				<div class="guide-column-list">
 
 					<!-- bs-card-wrap -->
@@ -428,7 +428,7 @@
 			</div>
 			<hr>
 			<div class="ui-guide-box">
-				<h2>Type B</h2>
+				<h2>TC사진 타입</h2>
 				<div class="guide-column-list">
 
 					<!-- bs-card-wrap -->
